[OS/2] Bug 511361 - fix font name conversion before calling FC to match the font